Blender closes after inserting a keyframe beyond Action Clip range #68487

Closed
opened 2019-08-09 23:05:14 +02:00 by Likkez · 7 comments

System Information
Operating system: Linux-5.0.12-050012-generic-x86_64-with-neon-18.04-bionic 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.104

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-09 18:48, hash: a571ff2c16

Short description of error
Blender instantly crashes if you try to insert a keyframe beyond action range.

Exact steps for others to reproduce the error

  1. Make a new action with 2 keyframes
  2. Push it down
  3. Open NLA Editor and select the action
  4. Hit Tab to edit the action
  5. Go beyond the action and insert a keyframe.

Alternatively, I've also attached a broken file where you just need to hit "I" to insert a keyframe and it closes.
broken.blend

**System Information** Operating system: Linux-5.0.12-050012-generic-x86_64-with-neon-18.04-bionic 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.104 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-09 18:48, hash: `a571ff2c16` **Short description of error** Blender instantly crashes if you try to insert a keyframe beyond action range. **Exact steps for others to reproduce the error** 1. Make a new action with 2 keyframes 2. Push it down 3. Open NLA Editor and select the action 4. Hit Tab to edit the action 5. Go beyond the action and insert a keyframe. Alternatively, I've also attached a broken file where you just need to hit "I" to insert a keyframe and it closes. [broken.blend](https://archive.blender.org/developer/F7656557/broken.blend)
Author

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

I 'am unable to reproduce the bug in my PC. I tried every possible condition, also try to follow the exact steps and file but nothing happens like this...
I tried in Blender 2.8 stable and also on today daily build (using windows 10)..

I 'am unable to reproduce the bug in my PC. I tried every possible condition, also try to follow the exact steps and file but nothing happens like this... I tried in Blender 2.8 stable and also on today daily build (using windows 10)..
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

I can reproduce by trying to insert a keyframe on the attached file.

Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94
2.81 (sub 1), branch: arcpatch-D5454, commit date: 2019-08-10 01:13, hash: 8491d7678d

MyNO68RPw7.mp4

I can reproduce by trying to insert a keyframe on the attached file. Operating system: Windows-10-10.0.14393 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94 2.81 (sub 1), branch: arcpatch-[D5454](https://archive.blender.org/developer/D5454), commit date: 2019-08-10 01:13, hash: `8491d7678d` [MyNO68RPw7.mp4](https://archive.blender.org/developer/F7657389/MyNO68RPw7.mp4)

This issue was referenced by 0dcd442c1f

This issue was referenced by 0dcd442c1f23e0210363cb6c2ec0c2a6e39c35af
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jacques Lucke self-assigned this 2019-08-14 16:12:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68487
No description provided.