Fix T68487: double free when inserting keyframe outside of action clip range